
[metadata]
license = MIT
license_file = LICENSE
classifier=
    Programming Language :: Python :: 3.8 # it will support these three versions
    Operating System :: OS Independent # supports all the os

[options]
install_requires =
    ensure==1.0.2 # third-party library
python_requires = >= 3.7 # bare min of Python required

[options.extras_require]
testing =
    pytest>=7.1.3 # helps to run unit tests and integration tests
    mypy>=0.971 # checks typing errors
    flake8>=5.0.4 # this helps to check other mistakes like extra spacings etc  
    tox>=3.25.1 # helps to create different working env locally to test your application
    black>=22.8.0 #formatting your application, means tests standard python structure

[options.package_data]
deepClassifier = py.typed # helps to ignore testing errors in the packages you are importing

[flake8] # it is kind of linting tool
max-line-length = 160 # max line length of our code
exclude = __init__.py # if it is empty and that package is called , then no error should come.